--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/clone": "^0.1.30",
     "bootstrap": "^4.1.1",
+    "clone": "^2.1.1",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.0",
     "react-dom": "^16.4.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
